cabal-version:      2.4
name:               donut
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Shiloh
maintainer:         shiloh.t.alleyne@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable donut
    main-is:          Main.hs
    
    -- Modules included in this executable, other than Main.
    other-modules:    

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    
        base >=4.16 && <4.17,
        ansi-terminal ^>= 1.1,
        array ^>= 0.5.4.0

    hs-source-dirs:   app
    default-language: Haskell2010
    ghc-options:      -O2
